--- a/ecs_and_queries/Cargo.toml
+++ b/ecs_and_queries/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "bevy_test"
+name = "ecs_and_queries"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = { version = "*", features = ["dynamic_linking"] }
+bevy = "*"
 
 [profile.dev]
 opt-level = 1
